objects/Customer_Relationship__c.object
<CustomObject>
    <description>Joins accounts to each other in relationships. Allows certain systems to reference addresses that belong to other accounts. Much of the SF functionality is pending future implementation.</description>
    <fields>
        <fullName>Bill_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Id__c</fullName>
        <label>Customer Relationship Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Id__c</fullName>
        <description>Concatenation of Customer RelationshipID and Primary Oracle Id and Related OracleId</description>
        <externalId>true</externalId>
        <label>Integration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsReciprocal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReciprocal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oracle_Cloud_Id__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Cloud Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Create_Date__c</fullName>
        <label>Oracle Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Customer_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Oracle_Customer_Number__c</fullName>
        <formula>Primary_Account__r.Oracle_Customer_Number__c</formula>
        <label>Primary Oracle Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Oracle_Id__c</fullName>
        <label>Primary Oracle Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Payment_Terms__c</fullName>
        <formula>Primary_Account__r.Payment_Terms__c</formula>
        <label>Primary Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Related_Relationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Oracle_Customer_Number__c</fullName>
        <formula>Related_Account__r.Oracle_Customer_Number__c</formula>
        <label>Related Oracle Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Oracle_Id__c</fullName>
        <label>Related Oracle Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Payment_Terms__c</fullName>
        <formula>Related_Account__r.Payment_Terms__c</formula>
        <label>Related Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ship To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Oracle Customer Relationship</label>
    <nameField>
        <displayFormat>CRN-{0000000000}</displayFormat>
        <label>Customer Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oracle Customer Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>